--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-aiogram>=3.4
-reportlab>=4.0
-python-dotenv>=1.0
-Flask>=3.0
-gunicorn>=21.2
+Flask==3.1.0
+gunicorn==23.0.0
+aiofiles==24.1.0
+aiogram==3.22.0
+python-dotenv==1.0.1
+reportlab==4.2.5
